<resources>
    <string name="app_name">Cartão de Visitas</string>
    <string name="titulo_novo_cartao">Novo cartão de visita</string>
    <string name="label_nome">Nome</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_email">Email</string>
    <string name="label_empresa">Empresa</string>
    <string name="label_cor">Cor</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="label_show_success">Cartão cadastrado com sucesso!</string>
</resources>